fix z-index

--- a/css/offcanvas.css
+++ b/css/offcanvas.css
@@ -23,6 +23,5 @@
     position: absolute;
     top: 0;
     width: 50%; /* 6 columns */
-    z-index: 9999;
   }
 }
